add link github home page

--- a/public/dropdown/dropdown.html
+++ b/public/dropdown/dropdown.html
@@ -21,6 +21,7 @@
       </ul>
     </div>
     <div class="selected-label" id="selectedLabel">Bạn đã chọn: <i>Chưa có</i></div>
+    <a href="/" class="home-button">Quay lại trang chủ</a>
   </div>
 </body>
 </html>
